syntax = "proto3";
package lightstreamer;

message Empty {}

message ServerInfo {
 string version = 1;
 string vendor = 2;
 string networkId = 3;
 string nodeVersion = 4;
 string nodeStatus = 5;
 uint64 blockHeight = 6;
 bytes blockHash = 7;
}

service LightStreamer {
 rpc GetServerInfo(Empty) returns (ServerInfo) {}
}
